# KhanaBazaar

./: .firebaserc  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  TODO.md  docker-compose.yml  firebase.json  new_schema.sql  render.yaml  schema.sql  skills-lock.json
backend/app/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  build.sh  predeploy.sh  pyproject.toml
backend/app/migrations/: README  env.py  script.py.mako
backend/app/migrations/versions/: 01deacebe263_add_seller_onboarding_request_table.py  06b2f494a6a8_initial_migration.py  07ee0330ff0a_fee_payment_method_flags.py  0f6d3ef363f0_add_referral_tables.py  1a82f642a321_delivery_otp_columns.py  20260425reset_schema_reset_baseline.py  25c4921219cc_add_seller_services_drop_business_.py  343d1ef4da58_add_platform_fee_tables.py  354c7943ff95_rename_min_order_value_to_free_delivery_.py  36dcf8e48719_delivery_modes_and_pickup_payment_.py  3e36788adecf_address_geo_columns.py  4e1b8e2fbd9e_orders_indexes_and_address_snapshot.py  4e5739351677_seller_profile_change_request.py  662ea92dac16_generalize_notification_recipient.py  68874265d516_add_policy_consent_tables.py  6e94cac9502c_add_userrole_and_firebase_uid.py  7f3a9c2e1b04_add_min_order_value_to_sellerprofile_service.py  801a251111fa_add_delivery_eta_columns.py  81ccebe49ed1_add_admin_action_log.py  83396aceca83_add_notifications_and_push_subscriptions.py  87e918bfa062_add_catalog_and_store_models.py  8bd3769f0789_enable_postgis.py  8dc9ba5723f1_add_profile_avatars.py  932c4bd8aa24_notification_campaigns_announcement_type.py  9383edc91f22_add_rotated_hashes_to_auth_session.py  9a9dee067b68_add_timezone_to_datetime.py  9b5b0cf69335_customer_account_lifecycle.py  9bb307d813e9_order_value_fee_invoice_table_and_enums.py  a1821934ae26_add_masterproductimage.py  a1b2c3d4e5f6_drop_firebase_uid_make_email_required.py  ab1154a400fe_add_dev_mailbox_tables.py  abc123456789_split_address_fields.py  c1a7f5e9b3d2_per_store_per_service_checkout.py  c3f2a1b4d5e6_add_dev_whatsapp_table.py  c6af6b06e7dd_add_favorite_customer_profile_id_.py  cca32f92b5d0_add_store_and_service_pause_columns.py  cecb3aa39b17_store_delivery_radius_pin_confirmed.py  d3f0983b94eb_customer_dashboard_redesign_profile_.py  d6342a56eaf6_add_sellerprofile_table.py  d7e8f9a0b1c2_add_order_preferred_delivery_window.py  (+8 more)
backend/app/scripts/: backfill_freebie_arrangements.py  bake_mumbai_seed.py  deploy_release.sh  seed_database.py  seed_seller_applications.py
backend/app/src/app/: __init__.py  main.py  worker.py
backend/app/src/app/api/: __init__.py  admin_actions.py  admin_notifications.py  auth.py  carts.py  catalog.py  catalog_admin.py  credit.py  customers.py  dev.py  dev_inbox.py  favorites.py  geo.py  meta.py  notifications.py  orders.py  platform_fees.py  policies.py  referrals.py  search.py  seller_change_requests.py  seller_onboarding.py  (+4 more)
backend/app/tests/: _credit_helpers.py  _helpers.py  conftest.py  test_access_token_sid.py  test_account_auth_gates.py  test_account_comms_skip.py  test_account_emails.py  test_account_lifecycle_model.py  test_account_lifecycle_service.py  test_address_from_payload.py  test_address_validator.py  test_admin_activity.py  test_admin_applications.py  test_admin_audit_helper.py  test_admin_customer_email.py  test_admin_customer_supervisor.py  test_admin_inventory.py  test_admin_pause_endpoints.py  test_admin_revoke_sessions.py  test_admin_verify.py  test_app_entrypoint.py  test_auth.py  test_auth_backward_compat.py  test_auth_refresh.py  test_auth_session_model.py  test_auth_sessions.py  test_avatar_model_columns.py  test_backfill_geocode.py  test_campaign_api.py  test_campaign_model.py  test_campaign_resolver.py  test_campaign_send.py  test_carts.py  test_carts_compare.py  test_carts_per_service.py  test_carts_replace.py  test_catalog.py  test_catalog_admin_auth.py  test_catalog_admin_categories.py  test_catalog_admin_pagination.py  (+167 more)
(+900 files in other folders)
