# Copyright (c) 2026 Rishi Mule. All Rights Reserved.
# This code and its associated documentation cannot be copied, modified, or distributed without explicit permission from the author.

[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Khana Bazaar Developer", email = "developer@khanabazaar.local" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "celery>=5.6.2",
    "email-validator>=2.0.0",
    "fastapi>=0.135.1",
    "google-cloud-storage>=3.11.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.4",
    "meilisearch-python-sdk>=7.0.0,<8.0.0",
    "pillow>=12.2.0",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.10.0",
    "python-multipart>=0.0.32",
    "pywebpush>=2.0.0",
    "redis>=7.3.0",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.41.0",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fakeredis>=2.25.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.21.0",
    "ruff>=0.15.5",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults (fastapi Depends)
    "W191",  # indentation contains tabs
    "C901",  # function too complex — request handlers + the seed script naturally have many branches; split out only when it genuinely hurts readability
]

[tool.ruff.lint.per-file-ignores]
# Reusing pytest fixtures imported from another test module reads as a
# redefinition when the fixture name is taken as a test parameter.
"tests/test_delivery_otp.py" = ["F811"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = [
    "migrations/",
    "scripts/",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = [
    "tests",
]
